Add config VM Options